--- a/Day1/index.html
+++ b/Day1/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    
+      <a href="bai1.html">Bài 1</a>
+      <div style="margin:10px 0 ;"><a href="bai2.html">Bài 2</a></div>
+      <a href="bai3.html">Bài 3</a>
+
   </body
 </html>
