--- a/Day1/ex04.html
+++ b/Day1/ex04.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <a href="#"></a>
-</body>
+  </head>
+  <body>
+    <a href="#">Trang chủ</a>
+    <a href="#">Giới thiệu</a>
+    <a href="#sanpham">Sảm phẩm</a>
+    <a href="#">Liên hệ</a>
+    <section id="home">
+        <h2>Trang chủ</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nam molestiae officiis blanditiis, non reprehenderit quibusdam voluptatibus voluptas et minus repellat. Omnis veritatis officiis facere eaque dolor eum magnam dolorem deleniti numquam ipsum reiciendis, tenetur consectetur! Cum, suscipit enim eligendi inventore asperiores corrupti. Laudantium sapiente, animi ex corrupti consectetur nam saepe quos molestiae temporibus harum doloribus error enim eveniet labore vero amet voluptatum beatae assumenda quisquam iusto. At fuga quod saepe aliquid explicabo commodi rerum unde consectetur, mollitia, est quam maiores. Suscipit provident ab laudantium perferendis corporis quam. Expedita sint libero eveniet maiores totam voluptatibus earum magnam assumenda quas ratione!</p>
+    </section>
+    <section id="gioithieu">
+        <h2>Giới thiệu</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nam molestiae officiis blanditiis, non reprehenderit quibusdam voluptatibus voluptas et minus repellat. Omnis veritatis officiis facere eaque dolor eum magnam dolorem deleniti numquam ipsum reiciendis, tenetur consectetur! Cum, suscipit enim eligendi inventore asperiores corrupti. Laudantium sapiente, animi ex corrupti consectetur nam saepe quos molestiae temporibus harum doloribus error enim eveniet labore vero amet voluptatum beatae assumenda quisquam iusto. At fuga quod saepe aliquid explicabo commodi rerum unde consectetur, mollitia, est quam maiores. Suscipit provident ab laudantium perferendis corporis quam. Expedita sint libero eveniet maiores totam voluptatibus earum magnam assumenda quas ratione!</p>
+    </section>
+    <section id="sanpham">
+        <h2>Sản phẩm</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nam molestiae officiis blanditiis, non reprehenderit quibusdam voluptatibus voluptas et minus repellat. Omnis veritatis officiis facere eaque dolor eum magnam dolorem deleniti numquam ipsum reiciendis, tenetur consectetur! Cum, suscipit enim eligendi inventore asperiores corrupti. Laudantium sapiente, animi ex corrupti consectetur nam saepe quos molestiae temporibus harum doloribus error enim eveniet labore vero amet voluptatum beatae assumenda quisquam iusto. At fuga quod saepe aliquid explicabo commodi rerum unde consectetur, mollitia, est quam maiores. Suscipit provident ab laudantium perferendis corporis quam. Expedita sint libero eveniet maiores totam voluptatibus earum magnam assumenda quas ratione!</p>
+    </section>
+    <section id="lienhe">
+        <h2>Liên hệ</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nam molestiae officiis blanditiis, non reprehenderit quibusdam voluptatibus voluptas et minus repellat. Omnis veritatis officiis facere eaque dolor eum magnam dolorem deleniti numquam ipsum reiciendis, tenetur consectetur! Cum, suscipit enim eligendi inventore asperiores corrupti. Laudantium sapiente, animi ex corrupti consectetur nam saepe quos molestiae temporibus harum doloribus error enim eveniet labore vero amet voluptatum beatae assumenda quisquam iusto. At fuga quod saepe aliquid explicabo commodi rerum unde consectetur, mollitia, est quam maiores. Suscipit provident ab laudantium perferendis corporis quam. Expedita sint libero eveniet maiores totam voluptatibus earum magnam assumenda quas ratione!</p>
+    </section>
+  </body>
 </html>
