--- a/Day2/index.html
+++ b/Day2/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        li
+        {
+            margin: 15px 0;
+        }
+        a
+        {
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <ul>
