--- a/Day2/index.html
+++ b/Day2/index.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        li
-        {
-            margin: 15px 0;
-        }
-        a
-        {
-            color: black;
-        }
+      li {
+        margin: 15px 0;
+        color: black;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <ul>
-        <li>
-            <a href="bai1.html">Bài 1</a>
-        </li>
-        <li>
-            <a href="bai2.html">Bài 2</a>
-        </li>
-        <li>
-            <a href="bai3.html">Bài 3</a>
-        </li>
-        <li>
-            <a href="bai4.html">Bài 4</a>
-        </li> 
+      <li>
+        <a href="bai1.html" target="_blank">Bài 1</a>
+      </li>
+      <li>
+        <a href="bai2.html" target="_blank">Bài 2</a>
+      </li>
+      <li>
+        <a href="bai3.html" target="_blank">Bài 3</a>
+      </li>
+      <li>
+        <a href="bai4.html" target="_blank">Bài 4</a>
+      </li>
     </ul>
-</body>
+  </body>
 </html>
