--- a/BTVN/Day2/bai2.html
+++ b/BTVN/Day2/bai2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1{
+        .title{
             background-color: blue;
             color: yellow;
             padding: 50px;
@@ -29,7 +29,9 @@
         <li>Change <strong>strong text</strong> to blue</li>
         <li>Change the padding Heading 1 to 10px, background color green and color white.</li>
     </ul>
-    <h1>This is the main heading that is wrapped in "h1" tags.</h1>
+   <div class="title">
+        <h1>This is the main heading that is wrapped in "h1" tags.</h1>
+   </div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span><b>make this take bold</b></span> Voluptatum, natus eum eaque beatae nam maxime, totam quibusdam quam qui tempore facilis. <span><i>make this text italic</i></span> incidunt labore corrupti optio perspiciatis nihil quas distinctio maiores?</p>
     <img src="https://fastly.picsum.photos/id/244/400/300.jpg?hmac=e-20TGbsFcLo94kZ9xZJDmxwBb5D6AOFKTOR3IsJYIc" alt="Ảnh 1 ">
 </body>
