--- a/BTVN/Day2/bai1.html
+++ b/BTVN/Day2/bai1.html
@@ -7,7 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <div>Posted by BGB, November,2012</div>
+    <article>
+      <div>Posted by BGB, November,2012</div>
     <h1>Low and Slow</h1>
     <p>
       This week I am <em>extremly</em> excited about cooking technique called
@@ -30,5 +31,6 @@
       >Warning: Sous vide cooked salmon is not pasteurized. Avoid it if you are
       pregnant or hVE IMMUNITY ISSUES</small
     >
+    </article>
   </body>
 </html>
