--- a/BTVN/Day2/bai1.html
+++ b/BTVN/Day2/bai1.html
@@ -9,28 +9,28 @@
   <body>
     <article>
       <div>Posted by BGB, November,2012</div>
-    <h1>Low and Slow</h1>
-    <p>
-      This week I am <em>extremly</em> excited about cooking technique called
-      <i>sous vide</i>. In <em>sous vide</em> cooking, you submerde the
-      food(usually vacuum scaled in plastic) into a wter bath thar is aprecisele
-      set to the target temperature you want to be cooked to. In his book,
-      <cite><em>Cooking fir Geeks</em></cite
-      >, Jess Potter describes ir as "ultra-low temperature poaching".
-    </p>
-    <p>
-      Next month, we will be serving
-      <strong>Sous Vide Salmon with Dill Hollandaise.</str>. To reserve a seat ar the
-      chef table, contact us before November 30.
-    </p>
-    <address>
-      blackgoose@example.com <br />
-      555-336
-    </address>
-    <small
-      >Warning: Sous vide cooked salmon is not pasteurized. Avoid it if you are
-      pregnant or hVE IMMUNITY ISSUES</small
-    >
+      <h1>Low and Slow</h1>
+      <p>
+        This week I am <em>extremly</em> excited about cooking technique called
+        <i>sous vide</i>. In <em>sous vide</em> cooking, you submerde the
+        food(usually vacuum scaled in plastic) into a wter bath thar is
+        aprecisele set to the target temperature you want to be cooked to. In
+        his book, <cite><em>Cooking fir Geeks</em></cite
+        >, Jess Potter describes ir as "ultra-low temperature poaching".
+      </p>
+      <p>
+        Next month, we will be serving
+        <strong>Sous Vide Salmon with Dill Hollandaise.</strong>. To reserve a
+        seat ar the chef table, contact us before November 30.
+      </p>
+      <address>
+        blackgoose@example.com <br />
+        555-336
+      </address>
+      <small
+        >Warning: Sous vide cooked salmon is not pasteurized. Avoid it if you
+        are pregnant or hVE IMMUNITY ISSUES</small
+      >
     </article>
   </body>
 </html>
