--- a/BTVN/Day3/bai1.html
+++ b/BTVN/Day3/bai1.html
@@ -38,7 +38,7 @@
           <div>
             <label for="email">Email address</label>
             <div>
-              <input type="email" name="email" id="email" placeholder="jhon@example.com" />
+              <input type="email" name="email" id="email" placeholder="john@example.com" />
             </div>
           </div>
           <div>
