--- a/BTVN/Day3/bai3.html
+++ b/BTVN/Day3/bai3.html
@@ -18,6 +18,10 @@
                 <td><input type="password" name="password" id="password"></td>
             </tr>
             <tr>
+                <td> <label for="city">City of <br> Empolyment:</label></td>
+                <td><input type="text" name="city" id="city"></td>
+            </tr>
+            <tr>
                 <td><label for="websever">Web sever:</label></td>
                 <td><select name="websever" id="websever">
                     <option value="0">- Choose a server -</option>
