--- a/BTVN/Day3/index.html
+++ b/BTVN/Day3/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <ul>
-        <li><a href="bai1.html">Bài 1</a></li>
-        <li><a href="bai2.html">Bài 2</a></li>
-        <li><a href="bai3.html">Bài 3</a></li>
-        <li><a href="bai4.html">Bài 4</a></li>
+        <li><a href="./Bai1/bai1.html">Bài 1</a></li>
+        <li><a href="./Bai2/bai2.html">Bài 2</a></li>
+        <li><a href="./Bai3/bai3.html">Bài 3</a></li>
+        <li><a href="./Bai4/bai4.html">Bài 4</a></li>
 
     </ul>
 </body>
