--- a/BTVN/Day3/Bai1/bai1.html
+++ b/BTVN/Day3/Bai1/bai1.html
@@ -51,7 +51,7 @@
           <div>
             <label for="city">City</label>
             <div>
-              <input type="email" name="city" id="city" placeholder="London" />
+              <input type="text" name="city" id="city" placeholder="London" />
             </div>
           </div>
           <div>
@@ -65,7 +65,7 @@
           <div>
             <label for="email">ZIP code</label>
             <div>
-              <input type="email" name="email" id="email" placeholder="EC2Y8DS" />
+              <input type="text" name="email" id="email" placeholder="EC2Y8DS" />
             </div>
           </div>
           <div>
