--- a/BTVN/Day4/Bai1/bai1.html
+++ b/BTVN/Day4/Bai1/bai1.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="bai1.css">
 </head>
 <body>
-    <div class="content-container">
-        <div class="content">
-            <h2><span>Earn income</span> with your CSS skills</h2>
-            <p>Sign up and we'll send you the best freelance oppotunities straight to your inbox. <br>
-            We're building the largest self-service freelancing marketplace for people like you.</p>
-            <form action="#">
-                <input type="email" name="email" placeholder="Email address">
-                <button>Send Me Opportunities</button>
+    <section class="content-container"> <!-- Thẻ chứa chính cho nội dung -->
+        <div class="content"> <!-- Thẻ chứa khối nội dung cụ thể -->
+            <h2><span>Earn income</span> with your CSS skills</h2> <!-- Tiêu đề với một phần văn bản được làm nổi bật bằng thẻ span -->
+            <p>Sign up and we'll send you the best freelance opportunities straight to your inbox. <br> <!-- Đoạn văn bản -->
+            We're building the largest self-service freelancing marketplace for people like you.</p> 
+            <form action="#"> <!-- Thẻ form với thuộc tính action để xử lý dữ liệu khi gửi -->
+                <input type="email" name="email" placeholder="Email address"> <!-- Trường nhập emailr -->
+                <button>Send Me Opportunities</button> <!-- Nút gửi form -->
             </form>
         </div>
-    </div>
+    </section>
 </body>
+
 </html>
