--- a/BTVN/Day4/Bai2/bai2.html
+++ b/BTVN/Day4/Bai2/bai2.html
@@ -12,18 +12,18 @@
     <link rel="stylesheet" href="bai2.css" />
   </head>
   <body>
-    <div class="blackquote" style="width: 50%">
-      <div class="quote">
-        <i class="ri-double-quotes-l"></i>
+    <div class="blackquote" style="width: 50%"> <!-- Thẻ chứa chính cho phần trích dẫn, với thuộc tính style để đặt chiều rộng -->
+      <div class="quote"> <!-- Thẻ chứa cho biểu tượng trích dẫn mở -->
+        <i class="ri-double-quotes-l"></i> <!-- Biểu tượng trích dẫn mở từ Remix Icon -->
       </div>
-      <blockquote>
+      <blockquote> <!-- Thẻ blockquote để định dạng đoạn văn bản trích dẫn -->
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
         accusantium voluptatum qui ipsam amet optio, perferendis a maiores
         accusamus minus fugiat exercitationem atque error neque labore expedita,
         quo veniam mollitia.
       </blockquote>
-      <div class="quote">
-        <i class="ri-double-quotes-r"></i>
+      <div class="quote"> <!-- Thẻ chứa cho biểu tượng trích dẫn đóng -->
+        <i class="ri-double-quotes-r"></i> <!-- Biểu tượng trích dẫn đóng từ Remix Icon -->
       </div>
     </div>
   </body>
