--- a/BTVN/Day4/Bai3/bai3.html
+++ b/BTVN/Day4/Bai3/bai3.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
+    <ul> <!-- Thẻ ul để tạo danh sách không có thứ tự -->
+        <!-- Mục danh sách với dữ liệu biểu tượng -->
         <li data-icon="😊">John</li>
         <li data-icon="😊">Michael</li>
         <li data-icon="😊">Simpson</li>
