--- a/BTVN/Day4/Bai4/bai4.html
+++ b/BTVN/Day4/Bai4/bai4.html
@@ -1,35 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="bai4.css">
+    <link rel="stylesheet" href="bai4.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="heading">
-            <h2>JS Maps Conclusion</h2>
-        </div>
+      <!-- Thẻ chứa chính cho toàn bộ nội dung -->
+      <header class="heading">
+        <!-- Thẻ chứa cho phần tiêu đề -->
+        <h2>JS Maps Conclusion</h2>
+        <!-- Tiêu đề -->
+      </header>
+      <main>
         <div class="paragraph1">
-            <p>In this tutorial, we looked at four uses of the <span>.map( )</span> method in Javascript. In combination with
-                other methods, the functionality of <span>.map( )</span> can be extended. For more information, see our <a href="#">How To
-                    Use Array Methods in Javascript: Iteration Methods</a> article.</p>
-        </div>
-        <div class="paragraph2">
-            <p>Want to deploy your application quickly? Try Cloudways, the #1 managed hosting provider
-                for small-to-medium businesses, agencies, and developer - for free. DigitalOcean and
-                Cloudways together will give you a reliable, scalable, and hassle-free managed hosting
-                experience with anytime support that makes all your hosting worries a thing of the past.
-                Start with $100 in free credits! <br>
-                <a href="#">Learn more here <i class="ri-arrow-right-line"></i> </a>
+            <!-- Thẻ chứa cho đoạn văn đầu tiên -->
+            <p>
+              In this tutorial, we looked at four uses of the
+              <span>.map( )</span> method in Javascript. In combination with other
+              methods, the functionality of <span>.map( )</span> can be extended.
+              For more information, see our
+              <a href="#"
+                >How To Use Array Methods in Javascript: Iteration Methods</a
+              >
+              article.
             </p>
-        </div>
+            <!-- Đoạn văn với nội dung về phương thức .map() trong JavaScript, bao gồm các thẻ span để làm nổi bật và liên kết đến bài viết khác -->
+          </div>
+          <div class="paragraph2">
+            <!-- Thẻ chứa cho đoạn văn thứ hai -->
+            <p>
+              Want to deploy your application quickly? Try Cloudways, the #1 managed
+              hosting provider for small-to-medium businesses, agencies, and
+              developer - for free. DigitalOcean and Cloudways together will give
+              you a reliable, scalable, and hassle-free managed hosting experience
+              with anytime support that makes all your hosting worries a thing of
+              the past. Start with $100 in free credits! <br />
+              <a href="#">Learn more here <i class="ri-arrow-right-line"></i> </a>
+              <!-- Liên kết đến thông tin thêm với biểu tượng mũi tên từ Remix Icon -->
+            </p>
+          </div>
+      </main>
     </div>
-</body>
+  </body>
 </html>
