--- a/BTVN/Day4/Bai4/bai4.html
+++ b/BTVN/Day4/Bai4/bai4.html
@@ -20,7 +20,7 @@
         <!-- Tiêu đề -->
       </header>
       <main>
-        <div class="paragraph1">
+        <div class="first__paragraph">
             <!-- Thẻ chứa cho đoạn văn đầu tiên -->
             <p>
               In this tutorial, we looked at four uses of the
@@ -28,13 +28,13 @@
               methods, the functionality of <span>.map( )</span> can be extended.
               For more information, see our
               <a href="#"
-                >How To Use Array Methods in Javascript: Iteration Methods</a
+                > How To Use Array Methods in Javascript: Iteration Methods</a
               >
               article.
             </p>
             <!-- Đoạn văn với nội dung về phương thức .map() trong JavaScript, bao gồm các thẻ span để làm nổi bật và liên kết đến bài viết khác -->
           </div>
-          <div class="paragraph2">
+          <div class="second__paragraph">
             <!-- Thẻ chứa cho đoạn văn thứ hai -->
             <p>
               Want to deploy your application quickly? Try Cloudways, the #1 managed
