--- a/BTVN/Day4/Bai4/bai4.html
+++ b/BTVN/Day4/Bai4/bai4.html
@@ -27,9 +27,7 @@
               <span>.map( )</span> method in Javascript. In combination with other
               methods, the functionality of <span>.map( )</span> can be extended.
               For more information, see our
-              <a href="#"
-                > How To Use Array Methods in Javascript: Iteration Methods</a
-              >
+              <a href="#"> How To Use Array Methods in Javascript: Iteration Methods</a>
               article.
             </p>
             <!-- Đoạn văn với nội dung về phương thức .map() trong JavaScript, bao gồm các thẻ span để làm nổi bật và liên kết đến bài viết khác -->
@@ -43,7 +41,9 @@
               you a reliable, scalable, and hassle-free managed hosting experience
               with anytime support that makes all your hosting worries a thing of
               the past. Start with $100 in free credits! <br />
-              <a href="#"> Learn more here <i class="ri-arrow-right-line"></i> </a>
+              <a href="#"> 
+                Learn more here <i class="ri-arrow-right-line"></i> 
+              </a>
               <!-- Liên kết đến thông tin thêm với biểu tượng mũi tên từ Remix Icon -->
             </p>
           </div>
