--- a/BTVN/Day4/Bai4/bai4.html
+++ b/BTVN/Day4/Bai4/bai4.html
@@ -14,13 +14,12 @@
   <body>
     <div class="container">
       <!-- Thẻ chứa chính cho toàn bộ nội dung -->
-      <header class="heading">
+      <div class="heading">
         <!-- Thẻ chứa cho phần tiêu đề -->
         <h2>JS Maps Conclusion</h2>
         <!-- Tiêu đề -->
-      </header>
-      <main>
-        <div class="first__paragraph">
+      </div>
+      <div class="first__paragraph">
             <!-- Thẻ chứa cho đoạn văn đầu tiên -->
             <p>
               In this tutorial, we looked at four uses of the
@@ -31,8 +30,8 @@
               article.
             </p>
             <!-- Đoạn văn với nội dung về phương thức .map() trong JavaScript, bao gồm các thẻ span để làm nổi bật và liên kết đến bài viết khác -->
-          </div>
-          <div class="second__paragraph">
+        </div>
+        <div class="second__paragraph">
             <!-- Thẻ chứa cho đoạn văn thứ hai -->
             <p>
               Want to deploy your application quickly? Try Cloudways, the #1 managed
@@ -46,8 +45,7 @@
               </a>
               <!-- Liên kết đến thông tin thêm với biểu tượng mũi tên từ Remix Icon -->
             </p>
-          </div>
-      </main>
+      </div>
     </div>
   </body>
 </html>
