--- a/BTVN/Day4/Bai4/bai4.html
+++ b/BTVN/Day4/Bai4/bai4.html
@@ -41,7 +41,7 @@
               with anytime support that makes all your hosting worries a thing of
               the past. Start with $100 in free credits! <br />
               <a href="#"> 
-                Learn more here <i class="ri-arrow-right-line"></i> 
+                <b>Learn more here <i class="ri-arrow-right-line"></i></b>
               </a>
               <!-- Liên kết đến thông tin thêm với biểu tượng mũi tên từ Remix Icon -->
             </p>
