--- a/BTVN/Day4/Bai1/bai1.html
+++ b/BTVN/Day4/Bai1/bai1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="bai1.css">
 </head>
 <body>
-    <section class="content-container"> <!-- Thẻ chứa chính cho nội dung -->
+    <footer class="content-container"> <!-- Thẻ chứa chính cho nội dung -->
         <div class="content"> <!-- Thẻ chứa khối nội dung cụ thể -->
             <h2><span>Earn income</span> with your CSS skills</h2> <!-- Tiêu đề với một phần văn bản được làm nổi bật bằng thẻ span -->
             <p>Sign up and we'll send you the best freelance opportunities straight to your inbox. <br> <!-- Đoạn văn bản -->
@@ -18,7 +18,7 @@
                 <button>Send Me Opportunities</button> <!-- Nút gửi form -->
             </form>
         </div>
-    </section>
+    </footer>
 </body>
 
 </html>
