--- a/BTVN/Day4/Bai4/bai4.html
+++ b/BTVN/Day4/Bai4/bai4.html
@@ -21,32 +21,33 @@
       </header>
       <main>
         <div class="first__paragraph">
-            <!-- Thẻ chứa cho đoạn văn đầu tiên -->
-            <p>
-              In this tutorial, we looked at four uses of the
-              <span>.map( )</span> method in Javascript. In combination with other
-              methods, the functionality of <span>.map( )</span> can be extended.
-              For more information, see our
-              <a href="#"> How To Use Array Methods in Javascript: Iteration Methods</a>
-              article.
-            </p>
-            <!-- Đoạn văn với nội dung về phương thức .map() trong JavaScript, bao gồm các thẻ span để làm nổi bật và liên kết đến bài viết khác -->
-          </div>
-          <div class="second__paragraph">
-            <!-- Thẻ chứa cho đoạn văn thứ hai -->
-            <p>
-              Want to deploy your application quickly? Try Cloudways, the #1 managed
-              hosting provider for small-to-medium businesses, agencies, and
-              developer - for free. DigitalOcean and Cloudways together will give
-              you a reliable, scalable, and hassle-free managed hosting experience
-              with anytime support that makes all your hosting worries a thing of
-              the past. Start with $100 in free credits! <br />
-              <a href="#"> 
-                Learn more here <i class="ri-arrow-right-line"></i> 
-              </a>
-              <!-- Liên kết đến thông tin thêm với biểu tượng mũi tên từ Remix Icon -->
-            </p>
-          </div>
+          <!-- Thẻ chứa cho đoạn văn đầu tiên -->
+          <p>
+            In this tutorial, we looked at four uses of the
+            <span>.map( )</span> method in Javascript. In combination with other
+            methods, the functionality of <span>.map( )</span> can be extended.
+            For more information, see our
+            <a href="#">
+              How To Use Array Methods in Javascript: Iteration Methods</a>
+            article.
+          </p>
+          <!-- Đoạn văn với nội dung về phương thức .map() trong JavaScript, bao gồm các thẻ span để làm nổi bật và liên kết đến bài viết khác -->
+        </div>
+        <div class="second__paragraph">
+          <!-- Thẻ chứa cho đoạn văn thứ hai -->
+          <p>
+            Want to deploy your application quickly? Try Cloudways, the #1
+            managed hosting provider for small-to-medium businesses, agencies,
+            and developer - for free. DigitalOcean and Cloudways together will
+            give you a reliable, scalable, and hassle-free managed hosting
+            experience with anytime support that makes all your hosting worries
+            a thing of the past. Start with $100 in free credits! <br />
+            <a href="#">
+              Learn more here <i class="ri-arrow-right-line"></i>
+            </a>
+            <!-- Liên kết đến thông tin thêm với biểu tượng mũi tên từ Remix Icon -->
+          </p>
+        </div>
       </main>
     </div>
   </body>
