--- a/BTVN/Day5/Bai1/bai1.html
+++ b/BTVN/Day5/Bai1/bai1.html
@@ -8,11 +8,11 @@
     <title>Document</title>
 </head> 
 <body>
-    <div class="container">
-        <div class="blur_background"> 
-            <div class="content">
-                <h2>Blurred Background</h2>
-                <p>By <span>F8 Fullstack</span></p>
+    <div class="container"> <!-- Thẻ chứa chính cho toàn bộ nội dung -->
+        <div class="blur_background"> <!-- Thẻ chứa nền mờ -->
+            <div class="content"> <!-- Thẻ chứa nội dung chính -->
+                <h2>Blurred Background</h2> <!-- Tiêu đề chính -->
+                <p>By <span>F8 Fullstack</span></p> <!-- Đoạn văn với phần tên tác giả được làm nổi bật bằng thẻ span -->
             </div>
         </div>
     </div>
