--- a/BTVN/Day5/Bai2/bai2.html
+++ b/BTVN/Day5/Bai2/bai2.html
@@ -8,45 +8,45 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="checkbox" name="check" id="first" hidden  />
-    <div class="question">
-      <label for="first">
-        <span class="plus">+</span>
-        <span class="minus">-</span>
-        <h4>How to set random colors?</h4>
+    <input type="checkbox" name="check" id="first" hidden /> <!-- Ô checkbox đầu tiên, ẩn khỏi giao diện người dùng -->
+    <div class="question"> <!-- Thẻ chứa câu hỏi đầu tiên -->
+      <label for="first"> <!-- Nhãn cho ô checkbox đầu tiên -->
+        <span class="plus">+</span> <!-- Biểu tượng dấu cộng -->
+        <span class="minus">-</span> <!-- Biểu tượng dấu trừ -->
+        <h4>How to set random colors?</h4> <!-- Tiêu đề câu hỏi đầu tiên -->
       </label>
     </div>
-    <div class="answer">
+    <div class="answer"> <!-- Thẻ chứa câu trả lời cho câu hỏi đầu tiên -->
       <p>
-        To set random colors: <br>
+        To set random colors: <br> <!-- Đoạn văn bản mô tả các bước để thiết lập màu ngẫu nhiên -->
           1) Add <strong>jag-faq-random-colors</strong> class. <br>
           2) To change color, open theme(num).css, find "jag-faq-random-colors". <br>
           3) You can change color from here. <br>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eaque aliquid eum provident dolor perspiciatis est tenetur excepturi facilis quos natus mollitia cupiditate facere doloribus officia, aspernatur voluptatibus ratione, atque ducimus debitis alias! In impedit vel excepturi voluptas adipisci officia sit quos corrupti, ipsam aperiam magnam ex ut quod ad quae minus inventore beatae sapiente dicta voluptatibus ipsum delectus commodi est. Maiores tempore perspiciatis perferendis, sunt libero, voluptate necessitatibus omnis officiis vel quasi placeat quam, suscipit beatae molestias nulla enim? Deserunt iusto aliquid ducimus vitae consequuntur facilis architecto quia officia, ipsum est tempore temporibus labore pariatur numquam omnis quibusdam! Cupiditate.
       </p>
     </div>
-    <input type="checkbox" name="check" id="second" hidden />
-    <div class="question">
-      <label for="second">
-        <span class="plus">+</span>
-        <span class="minus">-</span>
-        <h4>How to use theme colors and add new theme color?</h4>
+    <input type="checkbox" name="check" id="second" hidden /> <!-- Ô checkbox thứ hai, ẩn khỏi giao diện người dùng -->
+    <div class="question"> <!-- Thẻ chứa câu hỏi thứ hai -->
+      <label for="second"> <!-- Nhãn cho ô checkbox thứ hai -->
+        <span class="plus">+</span> <!-- Biểu tượng dấu cộng -->
+        <span class="minus">-</span> <!-- Biểu tượng dấu trừ -->
+        <h4>How to use theme colors and add new theme color?</h4> <!-- Tiêu đề câu hỏi thứ hai -->
       </label>
     </div>
-    <div class="answer">
+    <div class="answer"> <!-- Thẻ chứa câu trả lời cho câu hỏi thứ hai -->
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dicta unde veniam beatae amet praesentium reprehenderit, totam eaque minima commodi similique dignissimos, aut enim sint quam labore. Placeat iure adipisci quaerat ullam voluptas et recusandae voluptate nulla vel ipsum libero obcaecati ex eaque, incidunt perferendis doloremque error dolorem, natus ad rem laudantium velit est in odit. Laudantium, delectus id. Neque officiis fuga in voluptate dignissimos assumenda, nam quod corporis ipsam? Ab dicta aut omnis quibusdam quo deserunt eos sapiente, rem esse mollitia doloribus deleniti debitis atque. Labore illo dolore aperiam illum ad ipsam, corporis quia, iste, quam repellat perferendis. Ad!
       </p>
     </div>
-    <input type="checkbox" name="check" id="third" hidden />
-    <div class="question">
-      <label for="third">
-        <span class="plus">+</span>
-        <span class="minus">-</span>
-        <h4>How to change icon?</h4>
+    <input type="checkbox" name="check" id="third" hidden /> <!-- Ô checkbox thứ ba, ẩn khỏi giao diện người dùng -->
+    <div class="question"> <!-- Thẻ chứa câu hỏi thứ ba -->
+      <label for="third"> <!-- Nhãn cho ô checkbox thứ ba -->
+        <span class="plus">+</span> <!-- Biểu tượng dấu cộng -->
+        <span class="minus">-</span> <!-- Biểu tượng dấu trừ -->
+        <h4>How to change icon?</h4> <!-- Tiêu đề câu hỏi thứ ba -->
       </label>
     </div>
-    <div class="answer">
+    <div class="answer"> <!-- Thẻ chứa câu trả lời cho câu hỏi thứ ba -->
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos iure, temporibus aut quis laboriosam sed harum obcaecati natus numquam magnam ab iusto recusandae fugiat provident quas pariatur hic amet voluptate adipisci non. Excepturi officiis eius quibusdam quasi nisi, commodi assumenda. Aspernatur sapiente amet et ipsum. Reiciendis temporibus vero ut suscipit nostrum. Quas magnam, illo recusandae qui necessitatibus explicabo, dolore maiores numquam animi nulla, ratione totam molestias soluta tenetur in quo! Quae assumenda ratione dolore, ad maxime recusandae hic dolorum veritatis. Eum porro fugiat atque perspiciatis eaque veritatis saepe, accusantium vero assumenda placeat sit neque voluptate sapiente. Quisquam dolor eius fugiat?
       </p>
