--- a/BTVN/Day5/Bai3/bai3.html
+++ b/BTVN/Day5/Bai3/bai3.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bai3.css">
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
-    <title>Document</title>
-</head>
-<body>
-    <div class="header">
-        <h2>Take a look at our services</h2>
-        <p>Duis fringilla erat sit amet sapien difnissim hendrerit vel sit amet libero.</p>
-    </div>
-    <div class="card_container">
-        <div class="card">
-            <div class="content">
-                <i class="ri-camera-fill"></i>
-                <h3>Photography</h3>
-                <p>Praesent vitae ligula nulla. Curabitur porta dolor vitae felis vestibulum.</p>
-                <button>Read More</button>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="bai3.css">
+        <link
+        href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+        rel="stylesheet"
+        />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="header"> <!-- Thẻ chứa phần đầu trang -->
+            <h2>Take a look at our services</h2> <!-- Tiêu đề chính -->
+            <p>Duis fringilla erat sit amet sapien difnissim hendrerit vel sit amet libero.</p> <!-- Đoạn văn mô tả -->
+        </div>
+        <div class="card_container"> <!-- Thẻ chứa các thẻ card -->
+            <div class="card"> <!-- Thẻ card đầu tiên -->
+                <div class="content"> <!-- Thẻ chứa nội dung của thẻ card -->
+                    <i class="ri-camera-fill"></i> <!-- Biểu tượng camera từ Remix Icon -->
+                    <h3>Photography</h3> <!-- Tiêu đề của thẻ card -->
+                    <p>Praesent vitae ligula nulla. Curabitur porta dolor vitae felis vestibulum.</p> <!-- Đoạn văn mô tả -->
+                    <button>Read More</button> <!-- Nút bấm để đọc thêm -->
+                </div>
+            </div>
+            <div class="card"> <!-- Thẻ card thứ hai -->
+                <div class="content"> <!-- Thẻ chứa nội dung của thẻ card -->
+                    <i class="ri-macbook-line"></i> <!-- Biểu tượng máy tính xách tay từ Remix Icon -->
+                    <h3>Web Designing</h3> <!-- Tiêu đề của thẻ card -->
+                    <p>Praesent vitae ligula nulla. Curabitur porta dolor vitae felis vestibulum.</p> <!-- Đoạn văn mô tả -->
+                    <button>Read More</button> <!-- Nút bấm để đọc thêm -->
+                </div>
+            </div>
+            <div class="card"> <!-- Thẻ card thứ ba -->
+                <div class="content"> <!-- Thẻ chứa nội dung của thẻ card -->
+                    <i class="ri-video-on-fill"></i> <!-- Biểu tượng video từ Remix Icon -->
+                    <h3>Videography</h3> <!-- Tiêu đề của thẻ card -->
+                    <p>Praesent vitae ligula nulla. Curabitur porta dolor vitae felis vestibulum.</p> <!-- Đoạn văn mô tả -->
+                    <button>Read More</button> <!-- Nút bấm để đọc thêm -->
+                </div>
             </div>
         </div>
-        <div class="card">
-            <div class="content">
-                <i class="ri-macbook-line"></i>
-                <h3>Web Designing</h3>
-                <p>Praesent vitae ligula nulla. Curabitur porta dolor vitae felis vestibulum.</p>
-                <button>Read More</button>
-            </div>
-        </div>
-        <div class="card">
-            <div class="content">
-                <i class="ri-video-on-fill"></i>
-                <h3>Videography</h3>
-                <p>Praesent vitae ligula nulla. Curabitur porta dolor vitae felis vestibulum.</p>
-                <button>Read More</button>
-            </div>
-        </div>
-    </div>
-</body>
+    </body>
 </html>
