--- a/BTVN/Day6/Bai1/bai1.html
+++ b/BTVN/Day6/Bai1/bai1.html
@@ -9,44 +9,82 @@
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
     rel="stylesheet"/>
     <link rel="stylesheet" href="bai1.css">
-    <title>Document</title>
+    <title>Bai 1</title>
   </head>
   <body>
     <div class="content_container">
+      <!-- Tiêu đề chào mời người dùng -->
       <h2 class="lobster-regular">Hey there</h2>
+      <!-- Đoạn văn bản mô tả mục đích của form -->
       <p>
         <span>We'd like to hear from you.</span>
-        Send us your message or just say hi with our<br>contact form or directly via phone, we love to chat.
+        Send us your message or just say hi with our contact form or directly via phone, we love to chat.
       </p>
-    <form action="#">
+      <!-- Form liên hệ -->
+      <form action="#">
+        <!-- Input field cho tên -->
         <div class="input">
-            <i class="ri-user-line"></i><input type="text" placeholder="Your name" name="name">
+          <input type="text" placeholder="Your name" name="name">
+          <span class="notification">Enter your name</span> <!-- Thông báo nhập tên -->
+          <div class="input_icon">
+            <i class="ri-user-line"></i> <!-- Icon người dùng -->
+          </div>
+          <i class="ri-star-s-fill star"></i> <!-- Dấu sao -->
+          <span class="delete">&times;</span> <!-- Nút xóa -->
         </div>
+        <!-- Input field cho email -->
         <div class="input">
-            <i class="ri-mail-line"></i><input type="email" placeholder="your@domain.com" name="email">
+          <input type="email" placeholder="your@domain.com" name="email">
+          <span class="notification">Enter your email</span> <!-- Thông báo nhập email -->
+          <div class="input_icon">
+            <i class="ri-mail-line"></i> <!-- Icon email -->
+          </div>
+          <i class="ri-star-s-fill star"></i> <!-- Dấu sao -->
+          <span class="delete">&times;</span> <!-- Nút xóa -->
         </div>
+        <!-- Input field cho số điện thoại -->
         <div class="input">
-            <i class="ri-phone-line"></i><input type="text" placeholder="+44 00 123" name="phone_number">
+          <input type="text" placeholder="+44 00 123" name="phone_number">
+          <span class="notification">Enter your phone number</span> <!-- Thông báo nhập số điện thoại -->
+          <div class="input_icon">
+            <i class="ri-phone-line"></i> <!-- Icon điện thoại -->
+          </div>
+          <span class="delete">&times;</span> <!-- Nút xóa -->
         </div>
+        <!-- Dropdown cho chọn chủ đề -->
         <div class="input">
-            <i class="ri-book-3-line"></i><select name="subject">
-                <option value="none">Subject</option>
-                <option value="math">Math</option>
-                <option value="history">History</option>
-            </select>
+          <select name="subject">
+            <option value="none">Subject</option>
+            <option value="math">Math</option>
+            <option value="history">History</option>
+          </select>
+          <span class="notification">Enter your subject</span> <!-- Thông báo chọn chủ đề -->
+          <div class="input_icon">
+            <i class="ri-book-3-line"></i> <!-- Icon sách -->
+          </div>
+          <i class="ri-expand-up-down-fill star"></i> <!-- Dấu của thẻ select -->
         </div>
-        <div class="input">
-            <i class="ri-chat-2-line icon_textarea"></i><textarea name="message" cols="40" rows="10" placeholder="Message" ></textarea>
+        <!-- Textarea cho tin nhắn -->
+        <div class="input input_textarea">
+          <textarea name="message" cols="47" rows="10" placeholder="Message"></textarea>
+          <span class="notification">Enter your message</span> <!-- Thông báo nhập tin nhắn -->
+          <div class="input_icon">
+            <i class="ri-chat-2-line icon_textarea"></i> <!-- Icon tin nhắn -->
+          </div>
+          <i class="ri-star-s-fill star"></i> <!-- Dấu sao -->
+          <span class="delete">&times;</span> <!-- Nút xóa -->
         </div>
+        <!-- Checkbox để chọn gửi bản sao của tin nhắn -->
         <div class="form_footer">
-            <input type="checkbox" name="copy" id="coppy">
-            <label for="coppy">
-                <span class="checkmark"></span>
-                <span class="coppy_message">Send me a copy of this message</span>
-            </label>
-            <button>Send</button>
+          <input type="checkbox" name="copy" id="coppy">
+          <label for="coppy">
+            <span class="checkmark"></span>
+            <span class="coppy_message">Send me a copy of this message</span>
+          </label>
+          <!-- Nút gửi form -->
+          <button>Send</button>
         </div>
-    </form>
-    </div>
+      </form> <!-- Kết thúc form liên hệ -->
+    </div> <!-- Kết thúc content_container -->
   </body>
 </html>
