--- a/CSS/Border/index.html
+++ b/CSS/Border/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="box">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam molestiae dolore placeat dicta deserunt dolor officiis recusandae accusamus reprehenderit architecto vel officia doloribus quas labore, sapiente totam fuga, id temporibus.
+    </div>
 </body>
 </html>
