--- a/BTVN/Day6/Bai3/bai3.html
+++ b/BTVN/Day6/Bai3/bai3.html
@@ -12,9 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="https://rainbowit.net/html/histudy/assets/images/logo/logo.png" alt="logo">
-        </div>
+        <img src="https://rainbowit.net/html/histudy/assets/images/logo/logo.png" alt="logo">
         <div class="category">
             <i class="ri-function-line"></i>
             <span>
@@ -22,32 +20,34 @@
             </span>
         </div>
         <nav>
-            <div class="nav_menu">
-                <a href="#">Home</a>
-                <i class="ri-arrow-drop-down-line"></i>
-            </div>
-            <div class="nav_menu">
-                <a href="#">Courses</a>
-                <i class="ri-arrow-drop-down-line"></i>
-            </div>
-            <div class="nav_menu">
-                <a href="#">Dashboard</a>
-                <i class="ri-arrow-drop-down-line"></i>
-            </div>
-            <div class="nav_menu">
-                <a href="#">Pages</a>
-                <i class="ri-arrow-drop-down-line"></i>
-            </div>
-            <div class="nav_menu">
-                <a href="#">Elements</a>
-                <i class="ri-arrow-drop-down-line"></i>
-            </div>
-            <div class="nav_menu">
-                <a href="#">Blog</a>
-                <i class="ri-arrow-drop-down-line"></i>
-            </div>
-            <button>Join now</button>
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                    <i class="ri-arrow-down-s-line"></i>
+                </li>
+                <li>
+                    <a href="#">Courses</a>
+                    <i class="ri-arrow-down-s-line"></i>
+                </li>
+                <li>
+                    <a href="#">Dashboard</a>
+                    <i class="ri-arrow-down-s-line"></i>
+                </li>
+                <li>
+                    <a href="#">Pages</a>
+                    <i class="ri-arrow-down-s-line"></i>
+                </li>
+                <li>
+                    <a href="#">Elements</a>
+                    <i class="ri-arrow-down-s-line"></i>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                    <i class="ri-arrow-down-s-line"></i>
+                </li>
+            </ul>
         </nav>
+        <button>Join now</button>
     </header>
 </body>
 </html>
