--- a/BTVN/Day6/Bai3/bai3.html
+++ b/BTVN/Day6/Bai3/bai3.html
@@ -12,17 +12,23 @@
 </head>
 <body>
     <header>
+        <!-- Logo của trang web -->
         <img src="https://rainbowit.net/html/histudy/assets/images/logo/logo.png" alt="logo">
+        <!-- Phần danh mục -->
         <div class="category">
+            <!-- Biểu tượng icon -->
             <i class="ri-function-line"></i>
+            <!-- Chữ "Category" -->
             <span>
                 Category
             </span>
         </div>
+        <!-- Menu điều hướng -->
         <nav>
             <ul>
                 <li>
                     <a href="#">Home</a>
+                    <!-- Biểu tượng mũi tên xuống -->
                     <i class="ri-arrow-down-s-line"></i>
                 </li>
                 <li>
@@ -47,6 +53,7 @@
                 </li>
             </ul>
         </nav>
+        <!-- Nút "Join now" -->
         <button>Join now</button>
     </header>
 </body>
