--- a/BTVN/Day6/Bai2/bai2.html
+++ b/BTVN/Day6/Bai2/bai2.html
@@ -12,23 +12,30 @@
     <title>Bai 2</title>
   </head>
   <body>
+    <!-- Container chứa nội dung của trang -->
     <div class="content_container">
+      <!-- Box 1: UI/UX Design -->
       <div class="box">
+        <!-- Biểu tượng icon -->
         <div class="icon">
           <i class="ri-brush-2-line"></i>
         </div>
+        <!-- Tiêu đề -->
         <div class="title">
           <h3>
             Unique <br />
             UI/UX Design
           </h3>
         </div>
+        <!-- Mô tả ngắn -->
         <p>
           Short description for the ones who look for something new. Short
           description for the ones who look for something new.
         </p>
+        <!-- Link "Learn more" -->
         <a href="#">Learn more</a>
       </div>
+      <!-- Box 2: Theme Development -->
       <div class="box">
         <div class="icon">
           <i class="ri-layout-5-line"></i>
@@ -45,6 +52,7 @@
         </p>
         <a href="#">Learn more</a>
       </div>
+      <!-- Box 3: Digital Marketing -->
       <div class="box">
         <div class="icon">
           <i class="ri-flashlight-line"></i>
@@ -61,6 +69,7 @@
         </p>
         <a href="#">Learn more</a>
       </div>
+      <!-- Box 4: Website Design -->
       <div class="box">
         <div class="icon">
           <i class="ri-rocket-2-line"></i>
@@ -77,6 +86,7 @@
         </p>
         <a href="#">Learn more</a>
       </div>
+      <!-- Box 5: Responsive Design -->
       <div class="box">
         <div class="icon">
           <i class="ri-stack-line"></i>
@@ -93,6 +103,7 @@
         </p>
         <a href="#">Learn more</a>
       </div>
+      <!-- Box 6: Quick Support -->
       <div class="box">
         <div class="icon">
           <i class="ri-mail-line"></i>
