--- a/BTVN/Day6/Bai3/bai3.html
+++ b/BTVN/Day6/Bai3/bai3.html
@@ -16,12 +16,14 @@
         <img src="https://rainbowit.net/html/histudy/assets/images/logo/logo.png" alt="logo">
         <!-- Phần danh mục -->
         <div class="category">
-            <!-- Biểu tượng icon -->
-            <i class="ri-function-line"></i>
+            <button class="btn_category">
+                <!-- Biểu tượng icon -->
+                <i class="ri-function-line"></i>
             <!-- Chữ "Category" -->
-            <span>
-                Category
-            </span>
+                <span>
+                    Category
+                </span>
+            </button>
         </div>
         <!-- Menu điều hướng -->
         <nav>
