--- a/BTVN/Day7/Bai1/bai1.html
+++ b/BTVN/Day7/Bai1/bai1.html
@@ -16,50 +16,50 @@
       <ul class="nav">
         <li>
           <a href="#">
-            <i class="ri-home-4-fill"></i>
+            <i class="ri-home-4-fill"></i> <!-- Icon home -->
           </a>
         </li>
         <li>
           <span class="sub_nav">
-            <i class="ri-star-fill"></i>
-            <span>About us</span>
-            <i class="ri-arrow-down-s-line"></i>
+            <i class="ri-star-fill"></i> <!-- Icon star -->
+            <span>About us</span> <!-- Mục "About us" -->
+            <i class="ri-arrow-down-s-line"></i> <!-- Icon mũi tên xuống -->
           </span>
         </li>
         <li>
           <span class="sub_nav">
-            <i class="ri-megaphone-fill"></i>
-            <span>News</span>
-            <i class="ri-arrow-down-s-line"></i>
+            <i class="ri-megaphone-fill"></i> <!-- Icon megaphone -->
+            <span>News</span> <!-- Mục "News" -->
+            <i class="ri-arrow-down-s-line"></i> <!-- Icon mũi tên xuống -->
           </span>
+          <ul class="drop_menu"> <!-- Menu dropdown -->
+            <li class="drop_nav_menu">
+              <a href="#"><i class="ri-check-line"></i> Company </a> <!-- Mục "Company" -->
+            </li>
+            <li class="drop_nav_menu">
+              <a href="#"><i class="ri-check-line"></i> Products </a> <!-- Mục "Products" -->
+            </li>
+            <li class="drop_nav_menu">
+              <a href="#"><i class="ri-check-line"></i> Special </a> <!-- Mục "Special" -->
+            </li>
+          </ul>
         </li>
-        <ul class="drop_menu">
-          <li class="drop_nav_menu">
-            <a href="#"><i class="ri-check-line"></i> Company </a>
-          </li>
-          <li class="drop_nav_menu">
-            <a href="#"><i class="ri-check-line"></i> Products </a>
-          </li>
-          <li class="drop_nav_menu">
-            <a href="#"><i class="ri-check-line"></i> Special </a>
-          </li>
-        </ul>
         <li>
           <span class="sub_nav">
-            <i class="ri-briefcase-4-fill"></i>
-            <span>Portfolio</span>
-            <i class="ri-arrow-down-s-line"></i>
+            <i class="ri-briefcase-4-fill"></i> <!-- Icon briefcase -->
+            <span>Portfolio</span> <!-- Mục "Portfolio" -->
+            <i class="ri-arrow-down-s-line"></i> <!-- Icon mũi tên xuống -->
           </span>
         </li>
         <li>
           <a href="#">
-            <i class="ri-edit-2-fill"></i>
-            <span>Blog</span>
+            <i class="ri-edit-2-fill"></i> <!-- Icon edit -->
+            <span>Blog</span> <!-- Mục "Blog" -->
           </a>
         </li>
         <li class="none"></li>
         <li>
-          <a href="#"><i class="ri-phone-fill"></i> <span>Contacts</span></a>
+          <a href="#"><i class="ri-phone-fill"></i> <span>Contacts</span></a> <!-- Mục "Contacts" -->
         </li>
       </ul>
     </nav>
