--- a/BTVN/Day7/Bai1/bai1.html
+++ b/BTVN/Day7/Bai1/bai1.html
@@ -29,20 +29,20 @@
         <li>
           <span class="sub_nav">
             <i class="ri-megaphone-fill"></i> <!-- Icon megaphone -->
-            <span>News</span> <!-- Mục "News" -->
+            <span>News</span>
+            <ul class="drop_menu"> <!-- Menu dropdown -->
+              <li class="drop_nav_menu">
+                <a href="#"><i class="ri-check-line"></i> Company </a> <!-- Mục "Company" -->
+              </li>
+              <li class="drop_nav_menu">
+                <a href="#"><i class="ri-check-line"></i> Products </a> <!-- Mục "Products" -->
+              </li>
+              <li class="drop_nav_menu">
+                <a href="#"><i class="ri-check-line"></i> Special </a> <!-- Mục "Special" -->
+              </li>
+            </ul> <!-- Mục "News" -->
             <i class="ri-arrow-down-s-line"></i> <!-- Icon mũi tên xuống -->
           </span>
-          <ul class="drop_menu"> <!-- Menu dropdown -->
-            <li class="drop_nav_menu">
-              <a href="#"><i class="ri-check-line"></i> Company </a> <!-- Mục "Company" -->
-            </li>
-            <li class="drop_nav_menu">
-              <a href="#"><i class="ri-check-line"></i> Products </a> <!-- Mục "Products" -->
-            </li>
-            <li class="drop_nav_menu">
-              <a href="#"><i class="ri-check-line"></i> Special </a> <!-- Mục "Special" -->
-            </li>
-          </ul>
         </li>
         <li>
           <span class="sub_nav">
